[package]
name = "smart-leds-trait"
version = "0.1.1"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"
categories = [
    "embedded",
    "no-std",
    "hardware-support"]
description = "A trait for implementing effects, modifiers and drivers for programmable leds"
documentation = "https://docs.rs/crate/smart-leds-trait"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smart-leds-rs/smart-leds-trait"


[dependencies]
rgb = "0.8"
